# api/src/models/planning-poker/vote.ts
@@ -16,10 +16,9 @@ export class Vote {
     @Transform(({ value, obj }) => value ?? obj.round_id, { toClassOnly: true })
         roundId: number = -1;
 
-    @IsNumber()
-    @Expose({ name: 'userId' })
-    @Transform(({ value, obj }) => value ?? obj.user_id, { toClassOnly: true })
-        userId: number = -1;
+    @Expose({ name: 'playerId' })
+    @Transform(({ value, obj }) => value ?? obj.player_id, { toClassOnly: true })
+        playerId: number | null = null;
 
     @IsString()
     @IsOptional()
